syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";

import "google/protobuf/timestamp.proto";
import "receive_return_detail_message.proto";
import "receive_message.proto";

message ReceiveReturn {
  string id = 1;
  string company_id = 2;
  string branch_id = 3;
  string branch_name = 4;
  Receive receive = 5;
  string code = 6;
  google.protobuf.Timestamp date = 7;
  string remark = 8;
  google.protobuf.Timestamp created_at = 9;
  string created_by = 10;
  google.protobuf.Timestamp updated_at = 11;
  string updated_by = 12;
  repeated ReceiveReturnDetail details = 13;
}